--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "app.js",
   "scripts": {
     "start": "node app.js",
-    "start-prod": "node app.js > ~/invest-data/app.log 2>&1 &",
+    "start-prod": "node app.js > ~/invest_data/app.log 2>&1 &",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
