--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "",
   "main": "app.js",
   "scripts": {
-    "start": "node app.js",
-    "start-prod": "node app.js > ~/invest_data/app.log 2>&1 &",
+    "start": "node invest_data.js",
+    "start-prod": "node invest_data.js > ~/invest_data/invest_data.log 2>&1 &",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
